--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,11 @@ classifiers = [
 ]
 dependencies = [
     # List your dependencies here
-    # "requests>=2.28.0",
+    numpy>=1.22
+    pandas>=2.0.0
+    pydantic>=2.5.0
+    scipy>=1.10.0
+
 ]
 
 [project.urls]
